--- a/RPGVXAcecn/rgss/gc_tilemap.html
+++ b/RPGVXAcecn/rgss/gc_tilemap.html
@@ -62,7 +62,7 @@ type=text/css href="../style.css">
   <DT>flash_data
   <DD>
   <P>引用仿真游戏等中显示可以移动的范围时所用的闪烁信息（<A
-  href="rgss/gc_table.html">Table</A>），定义一个 [ 横尺寸 * 纵尺寸 ] 的二维数组。此数组必须与地图信息数组相同。每个元素使用位来代表元件闪烁颜色的RGB值；例如：
+  href="rgss/gc_table.html">Table</A>），定义一个 [ 横尺寸 * 纵尺寸 ] 的二维数组。此数组大小必须与地图信息数组相同。每个元素使用位来代表元件闪烁颜色的RGB值；例如：
   0xf84 代表闪烁颜色为 RGB(15,8,4)。</P>
   <DT>flags <SPAN class=rgss3>(RGSS3)</SPAN>
   <DD>
