--- a/RPGVXAcecn/rpgvxace/1120_intro_basicoperation.html
+++ b/RPGVXAcecn/rpgvxace/1120_intro_basicoperation.html
@@ -11,9 +11,9 @@
 
 <h2><a name="key_mainwindow">窗口各部分的名称和功能</a></h2>
 
-<p>打开工程后显示的画面成为“主窗口”。主窗口主要用于地图和事件的编辑。“数据库”和“素材管理”的工具可以从主窗口的菜单中呼出。各部分的技能如下所述。</p>
+<p>打开工程后显示的画面称为“主窗口”。主窗口主要用于地图和事件的编辑。“数据库”和“素材管理”的工具可以从主窗口的菜单中呼出。各部分的技能如下所述。</p>
 
-<div align="center"><img src="img/1120_01.png" alt="メインウィンドウ"></div>
+<div align="center"><img src="img/1120_01.png" alt="主窗口"></div>
 
 <dl>
 <dt>● 菜单栏 (1)</dt>
