--- a/RPGVXAcecn/rpgvxace/1130_intro_menubar.html
+++ b/RPGVXAcecn/rpgvxace/1130_intro_menubar.html
@@ -9,7 +9,7 @@
 <body>
 <h1><a name="key_menubar">菜单栏的内容</a></h1>
 
-<div align="center"><img src="img/1130_01.png" alt="メニューバー"></div>
+<div align="center"><img src="img/1130_01.png" alt="菜单栏"></div>
 
 <p>主窗口的菜单栏收录的项目主要有以下内容。</p>
 <p>如果菜单里的项目前方有图标的话，点击工具栏内图标相同的按钮可以执行相同的功能。此外，如果项目的末尾有快捷键的话，按下快捷键也可以执行。</p>
