--- a/RPGVXAcecn/rpgvxace/1140_intro_supporttool.html
+++ b/RPGVXAcecn/rpgvxace/1140_intro_supporttool.html
@@ -12,7 +12,7 @@
 
 <h2><a name="archive">压缩游戏数据</a></h2>
 
-<img src="img/1140_01.png" alt="ゲームデータの圧縮" class="float_r"><p>选择[文件] → [压缩游戏数据]，可以保存一个压缩了工程内容的文件，以便于发行完成的游戏。[目标文件夹]框中可以指定文件保存的目标。</p>
+<img src="img/1140_01.png" alt="压缩游戏数据" class="float_r"><p>选择[文件] → [压缩游戏数据]，可以保存一个压缩了工程内容的文件，以便于发行完成的游戏。[目标文件夹]框中可以指定文件保存的目标。</p>
 <p>保存时，选择[加密游戏数据]的话，工程的内容就会加密为外部不可见的状态。选择了[附带RTP数据]的话，就会带上RTP数据压缩。这样的话需要注意，虽然游戏运行可以脱离RTP，但文件大小会显著增大。</p><br>
 <p>此外，超过约2GB（※）的游戏作品在[压缩游戏数据]时可能会失败。<br>
 ※ 该数值只是估计值，容量可能会根据使用的PC环境和游戏内容而发生变化。</p>
@@ -50,14 +50,14 @@
 </dl>
 
 <h2><a name="sound_test">声音测试</a></h2>
-<img src="img/1140_03.png" alt="サウンドテスト" class="float_r">
+<img src="img/1140_03.png" alt="声音测试" class="float_r">
 <p>[工具] → [声音测试] 呼出的 [声音测试] 工具可以试听工程中包含的音乐和音效文件。音乐的播放在窗口关闭后仍将继续，因此可以当做在游戏制作中播放BGM的功能使用。</p>
 <p>窗口共有4个标签，分别为[BGM]（背景音乐）、[BGS]（背景音效）、[ME]（效果音乐）、[SE]（效果音效）。每个标签都可以在文件列表中指定歌曲。之后点击[播放]就可以开始播放音乐了。要停止播放可以点击[停止]。</p>
 <p>播放音量可以在[音量]（0~100%）的滑条中调节、音调可以在[音调]（50~150%）的滑条中调节。</p><br>
 
 <h2><a name="chara_tkool">角色生成</a></h2>
 
-<img src="img/1140_04.png" alt="キャラクター生成" class="float_r">
+<img src="img/1140_04.png" alt="角色生成" class="float_r">
 <p>[工具] → [角色生成] 呼出的 [角色生成] 工具，可以轻松制作出分配给角色和事件的人物图像。</p>
 <p>要制作图像，首先要点击[男性][女性]标签切换画面。接着在脸的各部分以及服装等设定项目中，指定元件的种类。点击[随机]按钮的话，每个项目的元件都会随机指定。</p>
 <p>修改了一个项目的设定后，基本上脸图和行走图都会跟着变化。但是，根据项目不同，只有一边的图片发生变化也是有可能的。</p>
@@ -65,7 +65,7 @@
 
 <h2><a name="option">选项</a></h2>
 
-<img src="img/1140_05.png" alt="オプション" class="float_r">
+<img src="img/1140_05.png" alt="选项" class="float_r">
 <p>菜单栏中选择 [工具] → [选项] 后会弹出 [选项] 工具，可以进行有关编辑器上透明色和网格的设置。这些设定完全不影响游戏的运行。</p>
 
 <dl>
@@ -80,7 +80,7 @@
 
 <h2><a name="testplay">游戏测试</a></h2>
 
-<img src="img/1140_06.png" alt="テストプレイ" class="float_r">
+<img src="img/1140_06.png" alt="游戏测试" class="float_r">
 <p>在菜单栏中的 [游戏] → [游戏测试] 中执行的游戏测试功能，可以当场测试制作中的游戏，并且和发行的游戏一样，确认设定和事件是否能按照自己的想法运转。</p>
 
 <dl>
@@ -104,20 +104,20 @@
 <dl>
 <dt><a name="editor">● 编辑脚本</a></dt>
 <dd>
-<img src="img/1140_11.png" alt="スクリプトエディタ" class="float_r">
+<img src="img/1140_11.png" alt="脚本编辑器" class="float_r">
 <p>在主菜单的[工具]中选择[脚本编辑器]后，会弹出一个用于编辑脚本的大对话框。</p>
 <p>要执行RPG类型的大规模游戏需要大量的程序，因此有必要将整个脚本分割成适当的单位进行管理。本软件将这个单位称为“脚本页”。在脚本编辑器左侧显示的就是脚本页的列表。</p>
 <p>脚本编辑器的操作是按照和数据库类似的感觉而设计的。与数据库一样，按下[F4]、[F5]可以简便地选择前后的脚本页。此外，[F6]键的功能是将光标位置上的单词复制到脚本页的名称上。</p><br></dd>
 
 <dt><a name="section">● 脚本页的操作</a></dt>
 <dd>
-<img src="img/script2.png" alt="セクションの操作" class="float_r">
+<img src="img/script2.png" alt="脚本页的操作" class="float_r">
 <p>右击脚本页的名字，会拉出一个上下文菜单。在菜单上选择[插入]的话，会在选择的位置前方追加一个新的脚本页。同样，通过[剪切]和[粘贴]操作，可以更改脚本页的顺序。</p>
 <p>和数据库不同，脚本页之间并不是通过ID进行管理的。各个脚本页会按照列表显示的顺序，从上到下依次执行。预设脚本的最下方有一个“Main”脚本页，预设脚本的结构是在各项定义全部完成后才真正开始游戏。</p><br></dd>
 
 <dt><a name="edit">● 编辑操作</a></dt>
 <dd>
-<img src="img/script3.png" alt="セクションの操作" class="float_r">
+<img src="img/script3.png" alt="脚本页的操作" class="float_r">
 <p>右击窗口右侧的文本编辑器部分，会弹出右图所示的上下文菜单。再次可以执行[剪切]、[粘贴]、[查找]、[替换]等基本的编辑操作。</p>
 <p>[Ctrl] + [F] 和 [Ctrl] + [G] 等快捷键，即使文本编辑器中没有焦点也是有效的。</p>
 <p>当你想要查找全部脚本页，而不只是当前编辑中的脚本页时，可以在脚本页的弹出菜单中选择[查找]。快捷键为 [Ctrl]+[Shift]+[F]。</p>
