--- a/RPGVXAcecn/rpgvxace/1150_intro_gameplay.html
+++ b/RPGVXAcecn/rpgvxace/1150_intro_gameplay.html
@@ -26,7 +26,7 @@
   <p>RM制作的游戏基本上使用6个按键进行游戏。为了描述方便我们一般将它们称为A、B、C等按键。下面的表格列出了通常情况下使用键盘/手柄进行游戏时的按键表。移动玩家或者选项的时候一般使用键盘或者手柄上的方向键。</p>
 </dd>
 </dl>
-<img src="img/1150_01.png" alt="ゲームパッド" class="float_r">
+<img src="img/1150_01.png" alt="游戏手柄" class="float_r">
 
 <table class="sys" border="1" cellspacing="0" cellpadding="4">
 <tr>
@@ -60,7 +60,7 @@
 <dl>
 <dt>● 游戏设定</dt>
 
-<img src="img/1150_02.png" alt="ゲームのプロパティ" class="float_r">
+<img src="img/1150_02.png" alt="Game 属性" class="float_r">
 
 <dd>
   <p>游戏过程中按F1将显示一个对话框，用这个对话框可以设置游戏的按键，使用[重置]按钮可以将按键重置为默认的按键。</p>
