--- a/RPGVXAcecn/rpgvxace/2110_map_outline.html
+++ b/RPGVXAcecn/rpgvxace/2110_map_outline.html
@@ -12,7 +12,7 @@
 
 <h2>地图是什么？</h2>
 
-<img src="img/2110_01.png" alt="マップエディター" class="float_r">
+<img src="img/2110_01.png" alt="地图编辑器" class="float_r">
 <p>地图是游戏故事所发生的舞台的相关数据，进行游戏时玩家主要就是控制自己的角色在地图上移动从而发展故事。</p>
 <p>制作与编辑地图的时候，我们所做的是将一小块一小块的『图块』进行拼合。</p>
 
@@ -27,7 +27,7 @@
 <dt>● 图块的分类</dt>
 
 <dd>
-<img src="img/map3.png" alt="マップの構造" class="float_r">
+<img src="img/map3.png" alt="地图的构造" class="float_r">
 <p>图块分成A~E层这5层。其中A层的高度最低，一般用于地形或者地面的图块。B~E层高度则比A层高，所以可以用于类似树木或者路标这样的图块。</p>
 <p>高度低的图块和高度高的图块可以放在地图上相同的位置，使用这两层高度不同图块能让你的地图看起来更具生命力。</p>
 <p>RTP中包含的标准图块包括表示海洋、草地、地面、墙壁以及各种表面的低层图块以及用于装饰它们的高层图块。</p><br></dd>
