--- a/RPGVXAcecn/rpgvxace/3210_db_actor.html
+++ b/RPGVXAcecn/rpgvxace/3210_db_actor.html
@@ -17,9 +17,9 @@
 
 <h2>设定项目的内容</h2>
 
-<div align="center"><img src="img/3210_01.png" alt="アクター"></div>
+<div align="center"><img src="img/3210_01.png" alt="角色"></div>
 <dl>
-<dt>●名字 / 称号</dt>
+<dt>●名字/称号</dt>
 <dd>
   <p>[名字]是角色在游戏中显示的名字，[称号]是主角的一个响亮的称号。如果名字太长，游戏中的菜单和战斗界面可能会写不下。[称号]会显示在角色的状态画面的右上方。</p>
 </dd>
