--- a/RPGVXAcecn/rpgvxace/3220_db_job.html
+++ b/RPGVXAcecn/rpgvxace/3220_db_job.html
@@ -16,14 +16,14 @@
 
 <h2>设定项目的内容</h2>
 
-<div align="center"><img src="img/3220_01.png" alt="職業"></div>
+<div align="center"><img src="img/3220_01.png" alt="职业"></div>
 <dl>
 <dt>●名称</dt>
 <dd><p>职业的名字。在游戏中会显示在菜单画面和状态画面的上方。</p></dd>
 
 <dt>●经验值曲线</dt>
 <dd>
-<img src="img/3220_02.png" alt="経験値曲線" class="float_r">
+<img src="img/3220_02.png" alt="经验值曲线" class="float_r">
 <p>设定一个经验值作为等级上升的标准。角色每获得一次升级所需经验值，角色的等级都会上升一级，获得能力值的提升并习得新的技能。</p>
 <p>所需经验值，可以点击设定栏的[…]打开设定窗口，设定下列的四个基准值。窗口上的[下一等级]标签中可以一览每级需要的经验值。背景上画出了经验值的曲线。建议参考这些数据进行设定。[总计]标签表示要达到各个等级累计需要的经验值。</p><br>
 </dd>
@@ -58,7 +58,7 @@
 </dl>
 
 <h2><a name="status_setting">能力值成长曲线的设定方法</a></h2>
-<img src="img/3220_03.png" alt="能力値成長曲線" class="float_r">
+<img src="img/3220_03.png" alt="能力值成长曲线" class="float_r">
 <p>[能力值成长曲线]窗口可以将各等级的能力值用如下的方式设定。点击能力值名称的标签可以切换编辑对象。编辑完点击[确定]后，设定的能力值就能够反映出来（点击[取消]的话内容将会丢弃）。</p><br>
 
 <dl>
