--- a/RPGVXAcecn/rpgvxace/3250_db_arms.html
+++ b/RPGVXAcecn/rpgvxace/3250_db_arms.html
@@ -16,7 +16,7 @@
 
 <h2>设定项目的内容</h2>
 
-<div align="center"><img src="img/3250_01.png" alt="武器／防具"></div>
+<div align="center"><img src="img/3250_01.png" alt="武器/护甲"></div>
 <dl>
 <dt>●名称</dt>
 <dd><p>武器/护甲的名称。名称过长有可能会导致游戏画面里写不下。</p></dd>
