--- a/RPGVXAcecn/rpgvxace/3270_db_enemy.html
+++ b/RPGVXAcecn/rpgvxace/3270_db_enemy.html
@@ -15,7 +15,7 @@
 
 <h2>设定项目的内容</h2>
 
-<div align="center"><img src="img/3270_01.png" alt="敵キャラ"></div>
+<div align="center"><img src="img/3270_01.png" alt="敌人"></div>
 <dl>
 <dt>●名称</dt>
 <dd><p>敌人的名称。名称过长有可能会导致游戏画面里写不下。</p></dd>
@@ -36,7 +36,7 @@
 
 <dt><a name="key_enemy_action">●行为模式</a></dt>
 <dd>
-<img src="img/3270_02.png" alt="行動パターン" class="float_r">
+<img src="img/3270_02.png" alt="行为模式" class="float_r">
   <p>设置战斗中敌人的行为方式。初始值已经自动设定好了普通攻击。双击此处可以打开[战斗行为]窗口，在[技能]中指定行为内容，[优先级]中指定该项目的优先级，[行为条件]按照以下的基准进行指定。战斗中的行为会依据后面的<a href="#action_rule">“行为模式应用规则”</a>来决定。</p>
 </dd>
 <dd>
