--- a/RPGVXAcecn/rpgvxace/3280_db_enemygroup.html
+++ b/RPGVXAcecn/rpgvxace/3280_db_enemygroup.html
@@ -16,7 +16,7 @@
 
 <h2>设定项目的内容</h2>
 
-<div align="center"><img src="img/3280_01.png" alt="敵グループ"></div>
+<div align="center"><img src="img/3280_01.png" alt="敌群"></div>
 <dl>
 <dt>●名称</dt>
 <dd><p>敌群的名称。该设定只在编辑器内部使用（不影响游戏的内容）。点击[自动命名]按钮后，会根据敌群中的敌人自动生成名称。</p></dd>
