--- a/RPGVXAcecn/rpgvxace/3290_db_state.html
+++ b/RPGVXAcecn/rpgvxace/3290_db_state.html
@@ -18,7 +18,7 @@
 
 <h2>设定项目的内容</h2>
 
-<div align="center"><img src="img/3290_01.png" alt="ステート"></div>
+<div align="center"><img src="img/3290_01.png" alt="状态"></div>
 <dl>
 <dt>●名称</dt>
 <dd><p>状态的名称。状态以图标来表示，因此游戏中不会用到状态的名称。</p></dd>
