--- a/RPGVXAcecn/rpgvxace/3300_db_animation.html
+++ b/RPGVXAcecn/rpgvxace/3300_db_animation.html
@@ -16,7 +16,7 @@
 
 <h2>设定项目的内容</h2>
 
-<div align="center"><img src="img/3300_01.png" alt="アニメーション"></div>
+<div align="center"><img src="img/3300_01.png" alt="动画"></div>
 <dl><dt>●名称</dt>
 <dd><p>动画的名称。该设定只在编辑器内部使用（不影响游戏的内容）。</p></dd>
 <dt>●动画图像</dt>
@@ -74,7 +74,7 @@
 
 <h2><a name="key_animation_frameview">帧预览的操作方法</a></h2>
 
-<img src="img/3300_02.png" alt="フレームビューの操作方法" class="float_r">
+<img src="img/3300_02.png" alt="帧预览的操作方法" class="float_r">
 <dl>
 <dt>配置单元</dt>
 <dd>
