--- a/RPGVXAcecn/rpgvxace/3310_db_tileset.html
+++ b/RPGVXAcecn/rpgvxace/3310_db_tileset.html
@@ -19,7 +19,7 @@
 
 <h2>设定项目的内容</h2>
 
-<div align="center"><img src="img/3310_01.png" alt="タイルセット"></div>
+<div align="center"><img src="img/3310_01.png" alt="图块"></div>
 <dl>
 <dt>●名称</dt>
 <dd><p>图块组的名称。该设定只在编辑器内部使用（不影响游戏的内容）。</p></dd>
@@ -49,13 +49,13 @@
 <dd><p>编辑模式切换到梯子属性的设定。添加了这个设定之后，图块上通行的人物朝向会固定向上。可以用来表现梯子、绳索这类升降的样子。</p>
 <p>在图块列表上点击就能变更该设定的启用与否。附加了该设定的图块会显示一个标志（梯子的图样）。</p></dd>
 
-<img src="img/3310_02.png" alt="茂み" class="float_r">
+<img src="img/3310_02.png" alt="流体属性" class="float_r">
 <dt>●流体属性</dt>
 <dd><p>编辑模式切换到流体属性的设定。添加了这个设定之后，图块上通行的人物下方的8像素将会隐藏，产生浅草才能没马蹄的感觉。</p>
 <p>但是，设定于[A1]~[A4]中的图块时，根据图像，人物可能不会在一部分图块上半透明显示。详情请见<a href="6100_resource.html#tileset">“素材规格”</a>。</p>
 <p>在图块列表上点击就能变更该设定的启用与否。附加了该设定的图块会显示一个标志（梯子的图样）。</p></dd><br>
 
-<img src="img/3310_03.png" alt="カウンター" class="float_r">
+<img src="img/3310_03.png" alt="柜台属性" class="float_r">
 <dt>●柜台属性</dt>
 <dd><p>编辑模式切换到柜台属性的设定。附加了这个属性后，角色即使不和事件相邻，也可以越过该图块触发事件。可以做出“两人隔着一张桌子对话”的效果。</p>
 <p>此外，[A2]图块设定该属性时，图案下端会向下偏移8像素。</p>
