--- a/RPGVXAcecn/rpgvxace/3320_db_commonevent.html
+++ b/RPGVXAcecn/rpgvxace/3320_db_commonevent.html
@@ -16,7 +16,7 @@
 
 <h2>设定项目的内容</h2>
 
-<div align="center"><img src="img/3320_01.png" alt="コモンイベント"></div>
+<div align="center"><img src="img/3320_01.png" alt="公共事件"></div>
 <dl>
 <dt>●名称</dt>
 <dd><p>公共事件的名称。该设定只在编辑器内部使用（不影响游戏的内容）。</p></dd>
