--- a/RPGVXAcecn/rpgvxace/3330_db_system.html
+++ b/RPGVXAcecn/rpgvxace/3330_db_system.html
@@ -16,7 +16,7 @@
 
 <h2>设定项目的内容</h2>
 
-<div align="center"><img src="img/3330_01.png" alt="システム"></div>
+<div align="center"><img src="img/3330_01.png" alt="系统"></div>
 <dl>
 <dt><a name="key_system_initialparty">●初始同伴</a></dt>
 
@@ -209,7 +209,7 @@
 
 <dt>●标题画面</dt>
 <dd>
-<img src="img/3330_02.png" alt="タイトル画面" class="float_r">
+<img src="img/3330_02.png" alt="标题画面" class="float_r">
 <p>游戏开始后，在游戏画面一开始显示的图像。在设定栏中点击[…]可以打开窗口，在其中指定图像。启用[绘制标题文字]后，在标题画面上方会显示[游戏标题]中所设定的作品名。（图像包含标题名时可以禁用）</p><br></dd>
 </dl>
 
