--- a/RPGVXAcecn/rpgvxace/3340_db_terms.html
+++ b/RPGVXAcecn/rpgvxace/3340_db_terms.html
@@ -17,7 +17,7 @@
 
 <h2>设定项目的内容</h2>
 
-<div align="center"><img src="img/3340_01.png" alt="用語"></div>
+<div align="center"><img src="img/3340_01.png" alt="用语"></div>
 <dl>
 <dt><a name="key_tarms_attribute">●属性</a></dt>
 <dd><p>属性名一览。要更改名称的话，点击选择列表内要更改的项目，在下方的输入框中输入名称。要增减项目数，可以点击[更改最大值]后指定项目数。</p>
