--- a/RPGVXAcecn/rpgvxace/5240_ev_ref_wait.html
+++ b/RPGVXAcecn/rpgvxace/5240_ev_ref_wait.html
@@ -10,7 +10,7 @@
 <h1>时间调整</h1>
 
 <h2><a name="wait01"></a>等待</h2>
-<img src="img/5240_01.png" alt="ウェイト" class="float_r">
+<img src="img/5240_01.png" alt="等待" class="float_r">
 <dl>
 <dt>●功能</dt>
 
