--- a/RPGVXAcecn/rpgvxace/5330_ev_ref_movie.html
+++ b/RPGVXAcecn/rpgvxace/5330_ev_ref_movie.html
@@ -11,7 +11,7 @@
 <h1>影像</h1>
 
 <h2><a name="movie01"></a>播放影像</h2>
-<img src="img/5330_01.png" alt="ムービーの再生" class="float_r">
+<img src="img/5330_01.png" alt="播放影像" class="float_r">
 <dl>
 <dt>●功能</dt>
 <dd><p>播放一段影像。</p></dd>
