--- a/RPGVXAcecn/rpgvxace/5360_ev_ref_highclass.html
+++ b/RPGVXAcecn/rpgvxace/5360_ev_ref_highclass.html
@@ -10,7 +10,7 @@
 <h1>高级</h1>
 
 <h2><a name="highclass01"></a>脚本</h2>
-<img src="img/5360_01.png" alt="スクリプト" class="float_r">
+<img src="img/5360_01.png" alt="脚本" class="float_r">
 <dl>
 <dt>●功能</dt>
 <dd><p>执行任意的Ruby脚本。</p></dd>
