--- a/RPGVXAcecn/rpgvxace/2120_map_design.html
+++ b/RPGVXAcecn/rpgvxace/2120_map_design.html
@@ -32,19 +32,19 @@
 </dl>
 
 <dl><dd><dl>
-<dt><img src="img/2120_11.png" alt="鉛筆">铅笔</dt>
+<dt><img src="img/2120_11.png" alt="铅笔">铅笔</dt>
 
 <dd><p>在鼠标点击的地方绘制图块。</p></dd>
 
-<dt><img src="img/2120_12.png" alt="四角形">矩形</dt>
+<dt><img src="img/2120_12.png" alt="矩形">矩形</dt>
 
 <dd><p>在你拖动的矩形区域内填充图块。</p></dd>
 
-<dt><img src="img/2120_13.png" alt="楕円">椭圆</dt>
+<dt><img src="img/2120_13.png" alt="椭圆">椭圆</dt>
 
 <dd><p>在你拖动的椭圆区域内填充图块。</p></dd>
 
-<dt><img src="img/2120_14.png" alt="塗りつぶし">填充</dt>
+<dt><img src="img/2120_14.png" alt="填充">填充</dt>
 
 <dd><p>在与你点击位置图块相同的区域内的连续范围中填充图块。</p></dd>
 </dl></dd></dl>
@@ -62,10 +62,10 @@
 <dt>● 自动阴影</dt>
 <dd><p>当两个不同的自动图块并排放置时，编辑器将自动在图块的右侧绘制阴影。不过某些特定图块并不会绘制阴影。</p></dd>
 
-<dt>● 阴影笔<img src="img/2120_21.png" alt="影ペン"></dt>
-<img src="img/2120_22.png" alt="影ペン" class="float_r">
-<dd><p>阴影笔可以用来描绘建筑物的阴影。它能画出四分之一个图块大小的阴影。</p>
-<p>要使用阴影笔时，在工具栏选择 阴影 （或者在任务栏的地图按钮中选择 阴影），接着点击地图即可。点击无阴影的区域将绘制阴影，点击有阴影的区域将擦除阴影。</p></dd><br>
+<dt>● 影笔<img src="img/2120_21.png" alt="影笔"></dt>
+<img src="img/2120_22.png" alt="影笔" class="float_r">
+<dd><p>影笔可以用来描绘建筑物的阴影。它能画出四分之一个图块大小的阴影。</p>
+<p>要使用影笔时，在工具栏选择 阴影 （或者在任务栏的地图按钮中选择 阴影），接着点击地图即可。点击无阴影的区域将绘制阴影，点击有阴影的区域将擦除阴影。</p></dd><br>
 
 <dt><a name="notice">● 底层图块的特殊规格</a></dt>
 <dd><p>底层图块中的A2图块（图块选择面版中的第3到8行）被分成了基本图块（前四列）与装饰图块（后四列）。装饰图块能够在基本图块上绘制而不覆盖基本图块。</p>
