--- a/RPGVXAcecn/rpgvxace/3230_db_skill.html
+++ b/RPGVXAcecn/rpgvxace/3230_db_skill.html
@@ -16,7 +16,7 @@
 
 <h2>设定项目的内容</h2>
 
-<div align="center"><img src="img/3230_01.png" alt="スキル"></div>
+<div align="center"><img src="img/3230_01.png" alt="技能"></div>
 <dl>
 <dt>●名称</dt>
 <dd><p>技能的名字。</p></dd>
