--- a/RPGVXAcecn/rpgvxace/3240_db_item.html
+++ b/RPGVXAcecn/rpgvxace/3240_db_item.html
@@ -15,7 +15,7 @@
 
 <h2>设定项目的内容</h2>
 
-<div align="center"><img src="img/3240_01.png" alt="アイテム"></div>
+<div align="center"><img src="img/3240_01.png" alt="物品"></div>
 <dl>
 <dt>●名称</dt>
 <dd><p>道具的名称。名称过长有可能会导致游戏画面里写不下。</p></dd>
