--- a/RPGVXAcecn/rpgvxace/3420_db_effect.html
+++ b/RPGVXAcecn/rpgvxace/3420_db_effect.html
@@ -17,7 +17,7 @@
 
 <h2>设定方法</h2>
 
-<img src="img/3420_01.png" alt="使用効果" class="float_r">
+<img src="img/3420_01.png" alt="使用效果" class="float_r">
 
 <p>双击设定栏中的空行即可设定效果。在弹出的窗口中选定效果类别，效果涉及的对象以及效果的大小。</p>
 <p>设定完成后，效果的内容会显示在[使用效果]列表。双击设定完成的项目可以再次编辑。此外，右击项目之后会弹出上下文菜单，执行复制设定、删除设定等操作。</p>
