--- a/RPGVXAcecn/rpgvxace/2130_map_operation.html
+++ b/RPGVXAcecn/rpgvxace/2130_map_operation.html
@@ -11,9 +11,9 @@
 <h1><a name="key_map_operation">地图数据的处理</a></h1>
 
 
-<h2>菜单快捷方式</h2>
+<h2>上下文菜单的操作</h2>
 
-<p>在地图列表中的某个地图上右键，将会弹出一个包含了对那个地图可以进行的操作的快捷方式菜单，这些操作包括改变地图的设置和复制地图数据。各个命令的功能将会在下面介绍。</p>
+<p>在地图列表中的某个地图上右键，将会弹出一个包含了对那个地图可以进行的操作的上下文菜单，这些操作包括改变地图的设置和复制地图数据。各个命令的功能将会在下面介绍。</p>
 
 <dl><dd><dl>
 <dt>新建地图</dt>
@@ -21,11 +21,11 @@
 <dd><p>添加一个新的地图数据。更多相关的信息，请参见<a href="2140_map_setting.html">地图数据的设置</a>。</p></dd>
 
 <dt>地图设置</dt>
-<dd><p>打开<B>地图设置</B>对话框。更多相关的信息，请参见<a href="2140_map_setting.html">地图数据的设置</a>。</p></dd>
+<dd><p>打开地图设置窗口。更多相关的信息，请参见<a href="2140_map_setting.html">地图数据的设置</a>。</p></dd>
 
 <dt>读取范例地图</dt>
 <img src="img/2130_01.png" alt="读取范例地图" class="float_r">
-<dd><p>基于已有的数据创建新的地图数据。单击列表中的地图名，查看它的内容，然后点击<B>确定</B>就可以了。</p><br></dd>
+<dd><p>基于已有的范例数据创建新的地图数据。单击列表中的地图名，查看它的内容，然后点击[确定]就可以了。</p><br></dd>
 
 <dt>复制</dt>
 <dd><p>将地图数据复制到剪贴板。</p></dd>
