--- a/RPGVXAcecn/rpgvxace/1120_intro_basicoperation.html
+++ b/RPGVXAcecn/rpgvxace/1120_intro_basicoperation.html
@@ -44,23 +44,23 @@
 <dd><p>点击设定栏，会出现“|”的光标。在这个状态下，就可以用键盘输入文字了。输入的文字会插入在光标的位置。光标也可以通过键盘的方向键来移动。输入文字的方法会根据你的输入法不同而不同。</p></dd>
 
 <dt>● 数值输入</dt>
-<dd><p>和文字输入一样，点击设定栏会出现“|”的光标。在这个状态下，可以用键盘输入半角数值。点击设定栏右端的［∧］［∨］按钮也可以增减数值。</p></dd>
+<dd><p>和文字输入一样，点击设定栏会出现“|”的光标。在这个状态下，可以用键盘输入半角数值。点击设定栏右端的[∧][∨]按钮也可以增减数值。</p></dd>
 
 <dt>● 单选框</dt>
-<dd><p>从多个项目中指定一个。点击［○］后，在圆圈中显示小黑点的项目生效。</p></dd>
+<dd><p>从多个项目中指定一个。点击[○]后，在圆圈中显示小黑点的项目生效。</p></dd>
 
 <dt>● 复选框</dt>
-<dd><p>可以指定对应项目的设定是否有效。点击［□］后，在方块中打上勾的项目生效，再次点击即可消除。</p></dd>
+<dd><p>可以指定对应项目的设定是否有效。点击[□]后，在方块中打上勾的项目生效，再次点击即可消除。</p></dd>
 
 <dt>● 下拉列表</dt>
-<dd><p>指定列表中的一个项目来应用。列表可以点击设定栏右侧的［∨］来展开。</p>
+<dd><p>指定列表中的一个项目来应用。列表可以点击设定栏右侧的[∨]来展开。</p>
 </dd>
 
 <dt>● 列表框</dt>
 <dd><p>一览多个设定。双击项目时会打开一个窗口，执行内容的添加和更改。</p></dd>
 
-<dt>●［…］按钮</dt>
-<dd><p>设定栏右侧有［…］的项目，表示该项目的内容需要在其他窗口指定。点击［…］，在打开的窗口中进行设定。</p></dd>
+<dt>●[…]按钮</dt>
+<dd><p>设定栏右侧有[…]的项目，表示该项目的内容需要在其他窗口指定。点击[…]，在打开的窗口中进行设定。</p></dd>
 
 <dt>● [确定][取消][应用]按钮</dt>
 <dd><p>确定使得更改过的设定项目内容生效。点击[确定]使内容生效并关闭窗口，[取消]撤销之前的更改并关闭窗口，[应用]仅使得内容生效而不关闭窗口。</p></dd>
