--- a/RPGVXAcecn/rpgvxace/2110_map_outline.html
+++ b/RPGVXAcecn/rpgvxace/2110_map_outline.html
@@ -22,7 +22,7 @@
 <dt><a name="key_map_tile">● 图块的功能</a></dt>
 
 <dd><p>除了图形数据外，每一个图块还包含了类似角色能否在图块上行走之类的许多数据。</p>
-<p>每张地图拥有一个包含了多个图块的『图块组』，我们使用图块组中的图块来编辑地图。你也可以通过修改一张地图的图块组来修改它的外观。你可以在<a href="3310_db_tileset.html">［数据库］</a>中修改图块组的内容。</p></dd>
+<p>每张地图拥有一个包含了多个图块的『图块组』，我们使用图块组中的图块来编辑地图。你也可以通过修改一张地图的图块组来修改它的外观。你可以在<a href="3310_db_tileset.html">[数据库]</a>中修改图块组的内容。</p></dd>
 
 <dt>● 图块的分类</dt>
 
