--- a/RPGVXAcecn/rpgvxace/2120_map_design.html
+++ b/RPGVXAcecn/rpgvxace/2120_map_design.html
@@ -15,7 +15,7 @@
 <dl>
 <dt>● 编辑模式的切换</dt>
 
-<dd><p>如果你希望编辑地图的外观时，点击工具栏的的［地图］按钮（或者在任务栏的模式按钮中选择［地图］）来进入地图编辑模式。</p></dd>
+<dd><p>如果你希望编辑地图的外观时，点击工具栏的的[地图]按钮（或者在任务栏的模式按钮中选择[地图]）来进入地图编辑模式。</p></dd>
 
 <dt>● 选择地图数据</dt>
 
