--- a/RPGVXAcecn/rpgvxace/4110_ev_outline.html
+++ b/RPGVXAcecn/rpgvxace/4110_ev_outline.html
@@ -12,26 +12,26 @@
 
 <h2>事件是什么？</h2>
 
-<p>在RPG中，事件通过各种方式推动游戏发展，比如与某个特定的人对话、从宝箱中获取财物、与BOSS战斗等等。</p>
+<p>在RPG中，事件通过各种方式推动游戏发展，比如与某个特定的人对话、从宝箱中获取财物、与BOSS战斗等等。本软件将这些各式各样的事件以“事件”的数据呈现。</p>
 <p>事件携带了一组在游戏中运行的过程。举个例子，把一个事件的图像设置为某个角色的行走图，然后使它可以在屏幕上显示一些文字 ，就能营造玩家与之对话的效果。</p>
 <p>通过设置事件的触发条件，不同的事件会根据玩家的情况和行为的不同而触发，这样你就可以使你的游戏更加丰富有趣。</p>
 
 <h2>事件的几种类型</h2>
 
-<p>正如下面所描述的，总共有三种事件。与游戏故事和进度有关的事件是地图事件。</p>
+<p>正如下面所描述的，总共有三种事件。与游戏故事和进度有关的事件设置在“地图事件”。</p>
 
 <dl>
-<dt>地图事件</dt>
+<dt>●地图事件</dt>
 <dd> <p>这些事件只会在地图上发生。用地图事件来表现对话或者从宝箱中获取财物之类的情景。你也可以定义一些没有图形的事件，它们不会显示出来，但会影响游戏系统或者推动故事发展（包括控制玩家移动与转移以及过场）。</p>
-<p>想要创建或者编辑一个地图事件，单击工具条上的<B>事件</B>按钮（或选择<B>模式</B>菜单中的<B>事件</B>选项），然后就切换到了你想要的事件编辑模式。</p>
+<p>想要创建或者编辑一个地图事件，单击工具栏上的[事件]按钮（或选择菜单栏上的 [模式] → [事件]选项），然后就切换到了你想要的事件编辑模式。</p>
 </dd>
 
-<dt>战斗事件</dt>
-<dd><p>这些事件只会在战斗场景发生。用战斗事件来表现敌人在低血量时的爆发之类的情景。在数据库中的<a href="3280_db_enemygroup.html"><B>敌群</B></a>标签页中设置战斗事件。</p>
+<dt>●战斗事件</dt>
+<dd><p>这些事件只会在战斗场景发生。用战斗事件来表现敌人在低血量时变身之类的情景。在数据库中的<a href="3280_db_enemygroup.html">[敌群]</a>标签页中设置、编辑战斗事件。</p>
 </dd>
 
-<dt>公共事件</dt>
-<dd><p>这些事件是被公用的。用公共事件来呼叫地图事件或者战斗事件，或者设置一组当某某物品被使用时触发的过程。在数据库中的<a href="3320_db_commonevent.html"><a href="3320_db_commonevent.html"><B>公共事件</B></a>标签页中设置公共事件。</p>
+<dt>●公共事件</dt>
+<dd><p>这些事件是泛用性的处理。用公共事件来呼叫地图事件或者战斗事件，或者设置一组当某某物品被使用时触发的处理。在数据库中的<a href="3320_db_commonevent.html"><a href="3320_db_commonevent.html">[公共事件]</a>标签页中设置公共事件。</p>
 </dd>
 </dl>
 
