--- a/RPGVXAcecn/rpgvxace/4120_ev_mapevent_outline.html
+++ b/RPGVXAcecn/rpgvxace/4120_ev_mapevent_outline.html
@@ -15,24 +15,24 @@
 
 <dl>
 
-<dt>事件的表示</dt>
+<dt>●事件的表示</dt>
 
 <dd>
 <p>要新建一个地图事件，必须指定它发生的地方（位置）、触发的条件、出现的条件以及会发生什么（内容）。</p>
-<p>NPC和宝箱这类事件还需要一个图像。你也可以创建没有图像的事件，比如让玩家在地图之间转移的事件、自动播放的过场事件。</p>
+<p>NPC和宝箱这类事件不只需要定义好事件的内容，还需要为之分配一个图像。你也可以创建没有图像的事件，比如让玩家在地图之间、建筑内外转移的事件、自动播放的过场事件。</p>
 <p>创建事件的时候，你首先要决定它在地图上的哪个位置。然后再设置它的触发条件等其他项目。</p>
 </dd>
 
-<dt><a name="key_mapevent_outline_eventpage">用事件页让事件内容更加多样</a></dt>
+<dt><a name="key_mapevent_outline_eventpage">●用事件页让事件内容更加多样</a></dt>
 <dd>
 <p>地图事件可以根据游戏的进展改变它的内容。</p>
-<p>这种改变是通过事件页办到的。每个事件最多可以有99个事件页，每个事件页都可以有不同的图像、出现条件、触发条件和内容。简单地说，每个地图事件都可以有99个变种。</p>
+<p>这种改变是通过“事件页”办到的。事件页可以让事件的内容发生“分情况处理”。每个事件最多可以有99个事件页，每个事件页都可以有不同的图像、出现条件、触发条件和内容。简单地说，每个地图事件都可以有99个变种。</p>
 </dd>
 
-<dt><a name="key_mapevent_outline_condition">用条件控制事件页的出现</a></dt>
+<dt><a name="key_mapevent_outline_condition">●用条件控制事件页的出现</a></dt>
 <dd>
-<p><B>出现条件</B>决定了事件会展现哪一种变种。这些条件包括开关、变量（稍后介绍）、物品的拥有情况等。</p>
-<p>游戏中，地图事件根据符合条件的事件页的内容出现。如果有多个事件页符合<B>出现条件</B>，序号最高的出现，如果没有事件页符合<B>出现条件</B>，该事件不出现。</p>
+<p>[出现条件]决定了事件会展现哪一种变种。这些条件包括开关、变量（稍后介绍）、物品的拥有情况等。</p>
+<p>游戏中，地图事件根据符合条件的事件页的内容出现。如果有多个事件页符合[出现条件]，序号最高的事件页出现在地图上。如果没有事件页符合[出现条件]，该事件不会出现。</p>
 </dd>
 
 </dl>
@@ -41,32 +41,32 @@
 
 <dl>
 
-<dt><a name="key_mapevent_outline_switch">用开关确定游戏状态</a></dt>
+<dt><a name="key_mapevent_outline_switch">●用开关确定游戏状态</a></dt>
 
 <dd>
-<p>开关和变量是事件页判断游戏状态所用的最基本的条件。</p>
+<p>开关和变量是事件页判断游戏状态所用的最基本的[出现条件]。</p>
 <p>开关有两个状态：打开和关闭。用开关来确定游戏状态及进程，比如“是否已经从国王那里领取了任务”、“BOSS是否已被击败”。</p>
 
-<p>在游戏开始的时候，所有的开关都是关闭的。可以在事件的<B>执行内容</B>中改变某个开关的值（使用事件指令<B>开关操作</B>）。</p>
+<p>在游戏开始的时候，所有的开关都是关闭的。在执行改变游戏局面的事件时，可以在事件的[执行内容]中打开某个开关（使用事件指令[开关操作]）。</p>
 
-<p>通过在某事件页的<B>出现条件</B>中判断指定的开关的情况，开关发生变化的时候可以立刻改变相关地图事件的内容。在整个游戏中根据进程调度开关可以很好地构建游戏的故事。</p>
+<p>通过开关的控制和其他事件页的[出现条件]，开关打开时可以立刻完全改变相关地图事件的内容。在整个游戏中根据进程调度开关可以很好地构建游戏的故事。</p>
 
 </dd>
 
-<dt><a name="key_mapevent_outline_variable">用变量来追踪数值</a></dt>
+<dt><a name="key_mapevent_outline_variable">●用变量来追踪数值</a></dt>
 
 <dd>
-<p>与开关不同，变量用来追踪数值（整数）的变化。游戏开始的时候所有的变量都被设置为0。同样，通过事件指令<B>变量操作</B>可以改变变量的值。</p>
-<p>用变量来详细的记录和控制地图事件的出现条件和结果，比如，根据玩家的剩余HP、金钱或其他数值来触发不同的事件。</p>
+<p>与开关不同，“变量”用来追踪数值（整数）的变化。游戏开始的时候所有的变量都被设置为0。在游戏过程中，可以根据游戏状况代入任意值，也可以与其他的值进行加法等运算（使用事件指令[变量操作]）。</p>
+<p>用变量来详细地记录和控制地图事件的出现条件和结果，比如，根据玩家的剩余HP、金钱或其他数值来改变事件的内容。</p>
 </dd>
 
-<dt>管理开关及变量</dt>
+<dt>●管理开关及变量</dt>
 
 <dd>
-<p>你最多可以在一个游戏中使用5000个开关和5000个变量。用多少、何时用完全由制作者自己决定。你可以为每个开关或变量一个备注名以防混淆（在选择开关或变量时的<B>名称</B>中填写）。</p>
+<p>你最多可以在一个游戏中使用5000个开关和5000个变量。用多少、何时用完全由制作者自己决定。你可以为每个开关或变量一个备注名以防混淆（在选择开关或变量时的[名称]栏中填写）。</p>
 </dd>
 
-<dt><a name="key_mapevent_outline_selfswitch">在自足式事件中使用独立开关</a></dt>
+<dt><a name="key_mapevent_outline_selfswitch">●在自足式事件中使用独立开关</a></dt>
 
 <dd>
 <p>地图事件还支持独立开关。独立开关只能在某事件的内部使用，每个事件最多四个（A到D）。</p>
