--- a/RPGVXAcecn/rpgvxace/4130_ev_mapevent_operation.html
+++ b/RPGVXAcecn/rpgvxace/4130_ev_mapevent_operation.html
@@ -2,41 +2,41 @@
 <html>
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=GBK">
-<title>操作地图事件</title>
+<title>新建/操作地图事件</title>
 <link href="../style.css" rel="stylesheet" type="text/css">
 </head>
 
 <body>
-<h1>操作地图事件</h1>
+<h1>新建/操作地图事件</h1>
 
-<h2>操作地图事件</h2>
+<h2>新建/操作地图事件</h2>
 
 <dl>
-<dt>在编辑模式之间切换</dt>
+<dt>●切换编辑模式</dt>
 <dd>
-  <p>要创建或编辑一个地图事件，单击工具条上的<B>事件</B>按钮（或选择<B>模式</B>菜单下的<B>事件</B>选项），然后就切换到了你想要的事件编辑模式。</p>
+  <p>要创建或编辑一个地图事件，单击主窗口工具栏上的[事件]按钮（或选择菜单栏中的[模式] → [事件]选项），然后就切换到了事件编辑模式。</p>
 </dd>
 
-<dt>新建地图事件</dt>
+<dt>●新建地图事件</dt>
 <dd>
-  <p>要新建一个地图事件，只需要在你想要放置事件的地方双击。在弹出的<B>新建事件</B>对话框中，编辑事件的设置，然后单击<B>确定</B>。更多信息请参见<a href="4140_ev_mapevent_setting.html">地图事件的设置</a>。</p>
+  <p>要新建一个地图事件，只需要在地图预览中你想要放置事件的地方双击。在弹出的[新建事件]窗口中，编辑事件的设置，然后单击[确定]。更多信息请参见<a href="4140_ev_mapevent_setting.html">地图事件的设置</a>。</p>
   <p>值得注意的是，在一张地图上放置太多的事件可能会造成游戏卡顿。我们建议一张地图不要超过100个。</p>
 </dd>
 
-<dt>编辑和移动地图事件</dt>
-<dd><p>地图上的事件会在编辑器中的相应位置显示一个图标（使用第一个事件页的图形）。双击这个图标就可以打开<B>编辑事件</B>对话框，然后编辑事件的各属性。你也可以拖动这个图标来移动事件。</p></dd>
+<dt>●编辑和移动地图事件</dt>
+<dd><p>地图上的事件会在编辑器中的相应位置显示一个图标（使用第一个事件页的图形）。双击这个图标就可以打开[编辑事件]窗口，然后编辑事件的设定内容。你也可以拖动这个图标来移动事件。</p></dd>
 
-<dt>菜单快捷方式</dt>
-<dd><p>在事件编辑模式下，在地图上右键会弹出一个菜单，里面包含了一些对事件的操作，包括复制、删除等。各个命令的功能将在下面介绍。</p></dd>
+<dt>●上下文菜单的操作</dt>
+<dd><p>在事件编辑模式下，在地图预览上右键会弹出一个上下文菜单，里面包含了一些对事件的操作，包括复制、删除等。各个命令的功能将在下面介绍。</p></dd>
 </dl>
 
 <dl><dd><dl>
-<dt>编辑事件（或新建事件）</dt>
-<dd><p>打开<B>编辑事件</B>对话框。</p></dd>
+<dt>编辑事件（在该位置上没有事件时为[新建事件]）</dt>
+<dd><p>打开编辑事件窗口。</p></dd>
 
 <dt>剪切</dt>
 <dd>
-  <p>复制当前事件然后删除它。</p>
+  <p>把当前事件复制到剪贴板并删除。</p>
 </dd>
 
 <dt>复制</dt>
@@ -52,26 +52,26 @@
 <dd><p>快速新建四种类型的事件（稍后介绍）。</p></dd>
 
 <dt><a name="key_mapevent_operation_initialposition">设置初始位置</a></dt>
-<dd><p>设置游戏开始的时候玩家和载具的初始位置。初始位置会用一个图标和字母S表示。</p></dd>
+<dd><p>设置游戏开始的时候玩家和载具的初始位置。初始位置会用一个带有字母S的图标表示。</p></dd>
 </dl></dd></dl>
 
 <h2><a name="key_mapevent_operation_eventmaker">快速新建特定事件</a></h2>
 
-<p>右键菜单中的<B>快速新建特定事件</B>让你可以轻易地创建四种RPG中常用的事件，包括移动场景以及宝箱。你可以创建的事件类型在下面介绍。</p>
+<p>右键菜单中的[快速新建特定事件]让你可以轻易地创建四种RPG中常用的事件，包括“场所移动”以及“宝箱”等。你可以创建的事件类型在下面介绍。</p>
 <p>与其他事件一样，快速创建的事件也可以进行编辑、复制等操作。</p>
 
 <dl><dd><dl>
 <dt>场所移动</dt>
-<dd><p>创建一个没有图像的事件，可以把玩家移动到一个特定的位置。把它用在入口和出口、上下楼梯等类似的地方。通过指定<B>目标位置</B>和<B>人物朝向</B>来完成事件的创建。</p></dd>
+<dd><p>创建一个透明（没有图像）的事件，可以把玩家移动到一个特定的位置。把它用在入口和出口、上下楼梯等类似的地方。通过指定[目标位置]和[人物朝向]来完成事件的创建。</p></dd>
 
 <dt>门</dt>
-<dd><p>创建一个以门为图像的事件，可以把玩家移动到一个特定的位置。通过指定<B>门扉图像</B>和<B>目标位置</B>来完成事件的创建。</p></dd>
+<dd><p>创建一个以门为图像的事件，可以把玩家移动到一个特定的位置。通过指定[门扉图像]和[目标位置]来完成事件的创建。</p></dd>
 
 <dt>宝箱</dt>
-<dd><p>创建一个宝箱事件，可以让玩家在第一次触发该事件时得到一些物品。通过指定<B>宝箱图像</B>和<B>内容</B>（金钱、物品、武器、护甲）来完成事件的创建。</p></dd>
+<dd><p>创建一个宝箱事件，可以让玩家在第一次触发该事件时得到一些物品。通过指定[宝箱图像]和[内容]（金钱/物品/武器/护甲）来完成事件的创建。</p></dd>
 
 <dt>旅馆</dt>
-<dd><p>创建一个以某角色为图像的事件，可以让玩家队伍全体恢复。通过指定<B>NPC图像</B>和<B>费用</B>来完成事件的创建。</p></dd>
+<dd><p>创建一个以某角色为图像的事件，可以让玩家队伍全体恢复。通过指定[NPC图像]和[费用]来完成事件的创建。</p></dd>
 </dl></dd></dl>
 
 <h6></h6>
